docs: enhance OS configuration guide with Large Pages phased startup and JVM tuning
- Add section 2.2: multi-JVM Large Pages strategy with 3-phase Standby List purge
- Add section 3.2: process priority strategy (RealTime vs High) with MinWorkingSet pitfall
- Add section 4: critical JVM params table (GuaranteedSafepointInterval=0, etc.)
- Add ProcessorAffinity masks and Aeron affinity trap warning to core layout table

Co-Authored-By: Claude Opus 4.6 (1M context) <noreply@anthropic.com>